--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
+
   {% include head.html %}
 
   <body>
-    {% include header.html %}
 
-    <div class="content-wrapper">
-      <div class="content-wrapper__inner">
-        {{ content }}
-      </div>
+    <main>
+      {{ content }}
+    </main>
 
-      {% include footer.html %}
-    </div>
+    {% include footer.html %}
+
   </body>
+
 </html>
