--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 ---
-<article class="post-container post-container--single">
+<article>
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
+  <header>
+    <h1>{{ page.title }}</h1>
   </header>
 
-  <section class="post">
+  <div>
     {{ content }}
-  </section>
+  </div>
 
 </article>
