--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -1,5 +1,5 @@
 .highlight .hll { background-color: #404040 }
-.highlight  { background: #202020; color: #d0d0d0 }
+.highlight  { background: #202020; color: #d0d0d0; overflow-x: scroll;padding:15px; border-radius: 12px;}
 .highlight .c { color: #999999; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .esc { color: #d0d0d0 } /* Escape */
