--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,4 +41,5 @@
       ga('send', 'pageview');
     </script>
   {% endif %}
+  <script data-ad-client="ca-pub-2760992553368273" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
